--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">BasketballShoesShow</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+    <string name="canNotCreateDB">无法创建数据库,请查看sd卡设置</string>
+    <string name="OK">确定</string>
 </resources>
